[gd_scene load_steps=2 format=3 uid="uid://avatar_creator_scene"]

[ext_resource type="Script" path="res://scripts/ui/avatar_creator.gd" id="1"]

[node name="AvatarCreator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Crear Avatar"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
text = "Nombre del Personaje:"

[node name="NameInput" type="LineEdit" parent="MarginContainer/HBoxContainer/LeftPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
placeholder_text = "Nombre"
max_length = 30

[node name="DescriptionLabel" type="Label" parent="MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
text = "Descripción / Backstory:"

[node name="DescriptionInput" type="TextEdit" parent="MarginContainer/HBoxContainer/LeftPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
placeholder_text = "Biografía del personaje..."
wrap_mode = 1

[node name="RazaLabel" type="Label" parent="MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
text = "Raza:"

[node name="RazaOption" type="OptionButton" parent="MarginContainer/HBoxContainer/LeftPanel"]
unique_name_in_owner = true
layout_mode = 2

[node name="SexoLabel" type="Label" parent="MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
text = "Sexo:"

[node name="SexoOption" type="OptionButton" parent="MarginContainer/HBoxContainer/LeftPanel"]
unique_name_in_owner = true
layout_mode = 2

[node name="ImageLabel" type="Label" parent="MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
text = "URL o Ruta de Imagen:"

[node name="ImageUrlInput" type="LineEdit" parent="MarginContainer/HBoxContainer/LeftPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
placeholder_text = "https://... o C:/ruta/imagen.png"

[node name="ImageButtonsContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 2

[node name="LoadImageButton" type="Button" parent="MarginContainer/HBoxContainer/LeftPanel/ImageButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Ayuda"

[node name="TestUrlButton" type="Button" parent="MarginContainer/HBoxContainer/LeftPanel/ImageButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Probar URL"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SaveButton" type="Button" parent="MarginContainer/HBoxContainer/LeftPanel/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Guardar"

[node name="BackButton" type="Button" parent="MarginContainer/HBoxContainer/LeftPanel/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Volver"

[node name="StatusLabel" type="Label" parent="MarginContainer/HBoxContainer/LeftPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Estado: Listo"
horizontal_alignment = 1

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="PreviewLabel" type="Label" parent="MarginContainer/HBoxContainer/RightPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Preview de Imagen"
horizontal_alignment = 1

[node name="PreviewImage" type="TextureRect" parent="MarginContainer/HBoxContainer/RightPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/HBoxContainer/RightPanel"]
layout_mode = 2

[node name="AvatarsLabel" type="Label" parent="MarginContainer/HBoxContainer/RightPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Avatares Guardados"
horizontal_alignment = 1

[node name="AvatarList" type="ItemList" parent="MarginContainer/HBoxContainer/RightPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="AvatarButtonsContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/RightPanel"]
layout_mode = 2

[node name="LoadAvatarButton" type="Button" parent="MarginContainer/HBoxContainer/RightPanel/AvatarButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Cargar"

[node name="DeleteAvatarButton" type="Button" parent="MarginContainer/HBoxContainer/RightPanel/AvatarButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Eliminar"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true
